--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "back",
+  "name": "server",
   "version": "1.0.0",
-  "description": "Back of the DockerProject",
+  "description": "Server of the DockerProject",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
