--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,30 @@
-version: "3.9"
-services:
-  back-dev:
-    depends_on:
+version: "3.9" #Utilisation de la version 3.9
+services: #Spécification des services docker
+  back-dev: #Création du conteneur back-dev
+    depends_on: #On spécifie que le service dépend du service mongo qui va donc build le service mongo avant le service back-dev
       - mongo
-    container_name: back-dev
-    image: back:dev
-    environment:
+    container_name: back-dev #Spécification du nom du conteneur
+    image: back:dev #Spécification du nom du conteneur
+    environment: #Spécification des variables d'environnement pour le service back-dev
       - SALT= ${SALT}
-    networks:
+    networks: #Permet au service back-dev de communiquer avec le service mongo et le service front-dev
       - mongodb-network-dev
       - network-dev
-    build:
-      context: server/
-      target: dev
-      dockerfile: Dockerfile
+    build: #Spécification des builds du service
+      context: server/ #On spécifie que l'on doit aller dans le dossier server
+      target: dev #On spécifie que l'on doit aller dans le dossier pointer le stage dev
+      dockerfile: Dockerfile #On spécifie que l'on doit pointer le fichier dockerfile
     volumes:
-      - ./server:/develop
+      - ./server:/develop #Signifie que le dossier "./server" sera accessible à l'intérieur du conteneur à "/develop".
     ports:
-      - "5000:5000"
-    tty: true
+      - "5000:5000" #Permet de mapper le port du conteneur au port 5000 de l'ordinateur
+    tty: true #Permet l'interaction avec le terminal sur le service
 
   front-dev:
     container_name: front-dev
     image: front:dev
     networks:
-      - network-dev
+      - network-dev #Définie que le service front-dev ne pourra communiquer qu'avec le back-dev
     build:
       context: client/
       target: dev
@@ -45,8 +45,8 @@ services:
       - mongo-db-data-dev:/db/data
 
 volumes:
-  mongo-db-data-dev:
+  mongo-db-data-dev: #Spécification des différents volumes
 
-networks:
+networks: #Spécification des différents network
   mongodb-network-dev:
   network-dev:
